syntax = "proto3";

message AssignId {
  int32 playerId = 1;
}