syntax = "proto3";

message TryBuild {
  int32 x = 1;
  int32 y = 2;
  int32 type = 3;
}