syntax = "proto3";

message TryCustomize {
   int32 race = 1;
   int32 map = 2;
}