syntax = "proto3";

message TrySetPolicy {
  int32 policyId = 1;
}